@@ -1372,8 +1372,7 @@ enum wxKeyCategoryFlags
         generated. Notice that this event is not generated when the mouse is
         captured as it is considered that the window which has the capture
         should receive all the keyboard events too without allowing its parent
-        wxTopLevelWindow to interfere with their processing. Also please note
-        that currently this event is not generated by wxOSX/Cocoa port.
+        wxTopLevelWindow to interfere with their processing.
     @endEventTable
 
     @see wxKeyboardState
